# kvapi

./: Cargo.toml  README.md
crates/kvapi/: Cargo.toml
crates/kvapi-macros/: Cargo.toml
crates/kvapi-macros-internals/: Cargo.toml
crates/kvapi-macros-internals/src/api/: builder.rs  common.rs  dict.rs  director.rs  headers.rs  input.rs  mod.rs  node.rs  tokens.rs
crates/kvapi-macros/src/: lib.rs
crates/kvapi/examples/: basic.rs  binance.rs  bybit.rs  fred.rs  kraken.rs  kucoin.rs  mexc.rs  sec.rs
crates/kvapi/examples/schema/: fred.rs  mod.rs  sec.rs
crates/kvapi/src/: lib.rs
crates/kvapi/tests/: parse.rs
