[workspace] 
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
convert_case = "0.6.0"
proc-macro2 = "1.0.86"
dotenv = "0.15"
syn = { version = "2", features = ["parsing"] }
quote = "1"
reqwest = { version = "0.12.7", features=["json"] }
serde = { version ="1" , features=["derive"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1.4", features = ["rt-multi-thread", "macros"] }
